# obsidian_plugin_LLM-Wiki

./: .gitignore  CLAUDE.md  README.md  install.sh
.claude/: settings.json
.claude/agents/: kb-verifier.md
.claude/skills/: autoresearch.md  save.md  wiki-ingest.md
cli/: README.md  package.json
cli/lib/: audit.mjs  compile.mjs  helpers.mjs  ingest.mjs  init.mjs  lint.mjs  query.mjs  search.mjs  status.mjs
plugin/: LICENSE  README.md  esbuild.config.mjs  main.js  manifest.json  package-lock.json  package.json  styles.css  tsconfig.json
plugin/src/: main.ts  runner.ts  settings.ts  sidebarView.ts
tasks/: 00-scaffold-repo.md  01-vault-audit.md  02-kb-structure.md  03-organize-vault.md  04-obsidian-plugin.md  05-kb-tools.md  06-subagent.md  07-final-verify.md  README.md
tools/: README.md  archive_orphans.py  pyproject.toml  repair_headings.py  repair_inline_links.py
tools/audit/: vault_audit.py
tools/audit/reports/: vault_inventory.json  vault_inventory.md
tools/compile/: compile.py
tools/graph/: analyze.py  export_graph.py  strengthen.py
tools/ingest/: batch_ingest.py  ingest.py
tools/link/: autolink.py
tools/lint/: lint.py
tools/organize/: migrate_caesar_vault.py  reorganize.py  rules.py
tools/organize/reports/: reorg_plan.md
tools/pipeline/: pipeline.py
tools/query/: query.py
tools/search/: search.py
tools/status/: dashboard.py
tools/watch/: watcher.py
