[project]
name = "llm-kb-tools"
version = "0.1.0"
description = "Karpathy-style LLM knowledge base tools for an Obsidian vault"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-frontmatter>=1.1.0",
    "rich>=13.9.0",
    "click>=8.1.7",
]

[project.scripts]
kb-audit = "audit.vault_audit:main"
kb-ingest = "ingest.ingest:main"
kb-compile = "compile.compile:main"
kb-query = "query.query:main"
kb-lint = "lint.lint:main"
kb-reorganize = "organize.reorganize:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["audit", "ingest", "compile", "query", "lint", "organize"]
